<resources>
    <string name="app_name">PasswordManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_password_fab">добавить пароль</string>
    <string name="save_password_button_text">Сохранить пароль</string>
    <string name="enter_password_hint">Введите пароль:</string>
    <string name="enter_site_url_hint">Введите ссылку на сайт:</string>
    <string name="enter_site_name_hint">Введите имя сайта:</string>
    <string name="enter_url_helper">Введите url в формате \'example.ru\'</string>
    <string name="password_list_title">Список ваших паролей</string>
    <string name="master_password_hint">Мастер пароль</string>
    <string name="change_master_password_title">Задайте мастер пароль</string>
    <string name="enter_master_password_title">Для доступа к объекту введите мастер пароль в строку ниже</string>
    <string name="first_time_dialog_message">Для продолжения работы задайте мастер пароль,
        он потребуется для доступа к сохраненным паролям в будущем.
        В дальнейшем мастер пароль можно будет изменить в настройках(иконка шестиренки).
    </string>
    <string name="ok_dialog_button_text">ОК</string>
    <string name="cancel_dialog_button_text">Назад</string>
    <string name="master_password_created_toast">Мастер пароль задан</string>
    <string name="master_password_changed_toast">Мастер пароль изменен</string>
    <string name="master_password_empty_error">Заполните поле</string>
    <string name="master_password_wrong_error">Неверный пароль</string>
    <string name="password_empty_error">Пароль не может быть пустым</string>
    <string name="icon_prefix">https://</string>
    <string name="icon_prefix_fallback">http://</string>
    <string name="icon_postfix">/favicon.ico</string>
</resources>