<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:id="@+id/text_input_site_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/password_layout_margin"
        android:hint="@string/enter_site_name_hint"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/text_input_site_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:id="@+id/text_input_site_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/password_layout_margin"
        android:hint="@string/enter_site_url_hint"
        app:helperText="@string/enter_url_helper"
        app:layout_constraintTop_toBottomOf="@id/text_input_site_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_input_site_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_site_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:id="@+id/text_input_site_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:layout_margin="@dimen/password_layout_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_input_site_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/save_password_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_site_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/password_layout_margin"
        android:text="@string/save_password_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_site_password" />

</androidx.constraintlayout.widget.ConstraintLayout>